cargo-features = ["different-binary-name"]

[package]
name = "ferris"
version = "0.1.0"
edition = "2018"

[dependencies]
volatile-register = "0"

[workspace]

[profile.dev]
opt-level = 2
lto = true
debug-assertions = false
overflow-checks = false

[profile.release]
lto = true

[[bin]]
name = "ferris"
filename = "ferris.xex"